@@ -58,6 +58,8 @@ debhelper (9.20150811+unreleased) UNRELEASED; urgency=medium
   * dh,Buildsytems: Accept "--no-parallel" to disable
     parallel builds.  It is effectively the same as using
     --max-parallel=1 but may be more intuative to some people.
+  * dh_makeshlibs: Use a noawait trigger to invoke ldconfig
+    rather maintscripts.
 
   [ Paul Tagliamonte ]
   * dh_gencontrol: Put debug debs back in the "debug" section.
